fixed explosions not doing damage and started work on the magic system

--- a/src/main/resources/assets/random_things/lang/en_us.json
+++ b/src/main/resources/assets/random_things/lang/en_us.json
@@ -36,6 +36,8 @@
   "block.random_things.rainbow_button": "Rainbow Button",
   "block.random_things.rainbow_pressure_plate": "Rainbow Pressure Plate",
   "block.random_things.rainbow_leaves": "Rainbow Leaves",
+  "block.random_things.quicker_sand": "Quicker Sand",
+
 
   "enchantment.random_things.explosion": "Explosion"
 }
